2012-02-13  Per Bothner  <per@bothner.com>

	* mac-test.scm: Update to use datum->syntax and #' syntax.
	* regex-test.scm: Update to use syntax->datum.

2012-02-09  Per Bothner  <per@bothner.com>

	* bridge.scm: Tweak to check for recent "isXxx" method fix.

2012-02-09  Jamison Hope  <jrh@theptrgroup.com>

	* bridge.scm: New tests for bridge methods.
	* Makefile.am: Update accordingly.

2012-02-07  Per Bothner  <per@bothner.com>

	* text-test.scm: Add a test for SRFI-13's strings-contains.

2012-02-05  Per Bothner  <per@bothner.com>

	* classes1.scm: Use #, and #,@ instead of , and ,@ in quasisyntax.
	* regex-test.scm: Likewise.

2012-01-31  Per Bothner  <per@bothner.com>

	* lib-test.sc: Add more tests from SRFI-41.

2012-01-27  Helmut Eller  <eller.helmut@gmail.com>
	    Per Bothner  <per@bothner.com>

	* sva35362.scm: New testcase for Savannah bug #35362 -
	"endless loop + unused continuation".
	* Makefile.am: Update accordingly.

2012-01-27  Per Bothner  <per@bothner.com>

	* promise1.scm: New testcase.
	* Makefile.am: Update accordingly.

2012-01-19  Per Bothner  <per@bothner.com>

	* mac-test.scm: New test of free-identifier=? and bound-identifier=?.

2012-01-15  Per Bothner  <per@bothner.com>

	* srfi-45-test1.scm: New tests, from SRFI-45.
	* srfi-45-test2.scm: Boundedness tests from SRFI-45.
	* lazy-test.scm: Update type name from lazy[T} to promise[T]
	* Makefile.am: Update acordingly.

2012-01-07  Bill Robinson <airbaggins@gmail.com>
	    Per Bothner  <per@bothner.com>

	* reflect1.scm: New testcase.
	* Makefile.am (SCRIPTS_TO_RUN): Update accordingly.

2012-01-01  Per Bothner  <per@bothner.com>

	* lazy-test.scm: New tests for lazy evaluation.
	* Makefile.am: Update accordinl.
	* inlining.expected: Update for implicit forcing.

	* inlining.expected: Update for fannkuch.

2011-12-19  Per Bothner  <per@bothner.com>

	* lib-test.scm: New tests of R7RS bytevector functions.

2011-12-12  Per Bothner  <per@bothner.com>

	* anonymous-lambda-1.scm: New test.